--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <script src="js/script.js"></script>
     </head>
     <body>
-        Hey
+        <div class="container">
+           Hey 
+        </div>
     </body>
 </html>
