--- a/index.html
+++ b/index.html
@@ -12,8 +12,31 @@
         <script src="js/script.js"></script>
     </head>
     <body>
+        <nav class="navbar">
+            <h3 class="logo">Nechl</h3>
+            <div class="links-wrapper">
+                <ul class="links">
+                    <li><a href="#home" class="active">Home</a></li>
+					<li><a href="#about">About</a></li>
+					<li><a href="#projects">Projects</a></li>
+					<li><a href="#teams">Teams</a></li>
+					<li><a href="login.php" class="active">Login</a></li>
+                </ul>
+            </div>
+        </nav>
         <div class="container">
-           Hey 
+			<section id="home">
+                <h1 class="title">Home</h1>
+            </section>
+            <section id="about">
+                <h1 class="title">About</h1>
+            </section>
+            <section id="projects">
+                <h1 class="title">Projects</h1>
+            </section>
+            <section id="teams">
+                <h1 class="title">Testimonials</h1>
+            </section>
         </div>
     </body>
 </html>
