--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="wisth=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Hey there. This website is just for testing purposes">
         <meta name="keywords" content="Github, Website, Test, Nechl">
         <meta name="author" content="Nechl">
