--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             </section>
             <section id="about">
                 <h1 class="title">About</h1>
+                This is now only over bugFix avaiable
             </section>
             <section id="projects">
                 <h1 class="title">Projects</h1>
