--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <title>Nechl's</title>
         <meta http-equiv="X-UA-Compatible" content="IE=EDGE,chrome=1">
         <link href="css/style.css" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/81c2c05f29.js" crossorigin="anonymous"	></script>
+
         <script src="js/script.js"></script>
     </head>
     <body>
