--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
         <meta name="description" content="Hey there. This website is just for testing purposes">
         <meta name="keywords" content="Github, Website, Test, Nechl">
         <meta name="author" content="Nechl">
-        <title>Nechl's</title>
+        <title>Nechl</title>
         <meta http-equiv="X-UA-Compatible" content="IE=EDGE,chrome=1">
         <link href="css/style.css" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/81c2c05f29.js" crossorigin="anonymous"	></script>
 
         <script src="js/script.js"></script>
     </head>
     <body>
-        <nav class="navbar">
+        <div>
+            <h1>Documentation</h1>
+        </div>
+        <!--<nav class="navbar">
             <h3 class="logo">Nechl</h3>
             <div class="links-wrapper">
                 <ul class="links">
@@ -40,6 +42,6 @@
             <section id="teams">
                 <h1 class="title">Testimonials</h1>
             </section>
-        </div>
+        </div> -->
     </body>
 </html>
