--- a/index.html
+++ b/index.html
@@ -13,35 +13,10 @@
         <script src="js/script.js"></script>
     </head>
     <body>
-        <div>
+        <div class="main-container">
             <h1>Documentation</h1>
+            <p>This is the documentation of the build of the <a href="https://www.github.com/nechl/Matura-Projekt" target=" _blank">Maturaprojekt</a> by XX and YY for the Kantonsschule Baden 2021.</p>
         </div>
-        <!--<nav class="navbar">
-            <h3 class="logo">Nechl</h3>
-            <div class="links-wrapper">
-                <ul class="links">
-                    <li><a href="#home" class="active">Home</a></li>
-					<li><a href="#about">About</a></li>
-					<li><a href="#projects">Projects</a></li>
-					<li><a href="#teams">Teams</a></li>
-					<li><a href="login.php" class="active">Login</a></li>
-                </ul>
-            </div>
-        </nav>
-        <div class="container">
-			<section id="home">
-                <h1 class="title">Home</h1>
-            </section>
-            <section id="about">
-                <h1 class="title">About</h1>
-                This is now only over bugFix avaiable
-            </section>
-            <section id="projects">
-                <h1 class="title">Projects</h1>
-            </section>
-            <section id="teams">
-                <h1 class="title">Testimonials</h1>
-            </section>
-        </div> -->
+        
     </body>
 </html>
