extra page, so that every project has its own page

--- a/documentation.html
+++ b/documentation.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Hey there. This website is just for testing purposes">
         <meta name="keywords" content="Github, Website, Test, Nechl">
         <meta name="author" content="Nechl">
-        <title>Nechl</title>
+        <title>Documentation</title>
         <meta http-equiv="X-UA-Compatible" content="IE=EDGE,chrome=1">
         <link href="css/style.css" rel="stylesheet">
 
@@ -14,16 +14,8 @@
     </head>
     <body>
         <div class="main-container">
-            <h1>Projects</h1>
-
-            <div class="project">
-                <a href="/documentation.html" target="_blank">
-                    <div>
-                        <h3>Maturaproject</h3>
-                        <p>This is the build of the Maturaproject.</p>
-                    </div> 
-                </a>
-            </div>
+            <h1>Documentation</h1>
+            <p>This is the documentation of the build of the <a href="https://www.github.com/nechl/Matura-Projekt" target=" _blank">Maturaprojekt</a> by XX and YY for the Kantonsschule Baden 2021.</p>
         </div>
         
     </body>
