addition for extra border-style property

--- a/documentation.html
+++ b/documentation.html
@@ -15,7 +15,7 @@
     <body>
         <div class="main-container">
             <h1>Documentation</h1>
-            <p>This is the documentation of the build of the <a href="https://www.github.com/nechl/Matura-Projekt" target=" _blank">Maturaprojekt</a> by XX and YY for the Kantonsschule Baden 2021.</p>
+            <p>This is the documentation of the build of the <a class="github_links" href="https://www.github.com/nechl/Matura-Projekt" target=" _blank">Maturaprojekt</a> by XX and YY for the Kantonsschule Baden 2021.</p>
         </div>
         
     </body>
