--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1>Projects</h1>
 
             <div class="project">
-                <a href="/documentation.html" target="_blank">
+                <a class="project-container-link" href="/documentation.html" target="_blank">
                     <div>
                         <h3>Maturaproject</h3>
                         <p>This is the build of the Maturaproject.</p>
